fix: repair missions loading, history and scouting
